# rpi_experiments

./: .flake8  CMakeLists.txt  adcs.py  custom_viewbox.py  lc_meter.py  mcp4728.py  multi_range_dac.py  osc.bash  osc.py  pyproject.toml  test.py
schematics/rpi_oscilloscope/: 2-Channel RPi Oscilloscope.kicad_pcb  2-Channel RPi Oscilloscope.kicad_prl  2-Channel RPi Oscilloscope.kicad_pro  2-Channel RPi Oscilloscope.kicad_sch  adc.kicad_sch  frontend.kicad_sch  gain_bias_dac.kicad_sch  i2c_adj_bias copy.kicad_sch  i2c_adj_bias.kicad_sch
src/: adc.cpp  adc.hpp  adc_interfaces.cpp  ads7884.cpp  buffered_adc.cpp  buffered_adc.hpp  dma_adc.cpp  dma_adc.hpp  dma_adc_test.cpp  dma_test.cpp  freq_count.cpp  frequency_counter.cpp  frequency_counter.hpp  gpclk_test.cpp  gpio_osc.cpp  gpio_pwm.cpp  mbox_test.cpp  mcp4728.cpp  mcp4728.hpp  mcp_test.cpp  parallel_adc.cpp  parallel_adc.hpp  peripheral_interfaces.cpp  serial_adc.cpp  serial_adc.hpp  timer_test.cpp
src/peripherals/: CMakeLists.txt  peripheral.cpp  peripheral.hpp
src/peripherals/arm_timer/: CMakeLists.txt  arm_timer.cpp  arm_timer.hpp  arm_timer_defs.hpp
src/peripherals/clock/: CMakeLists.txt  clock.cpp  clock.hpp  clock_defs.hpp
src/peripherals/dma/: CMakeLists.txt  dma.cpp  dma.hpp  dma_defs.hpp
src/peripherals/gpio/: CMakeLists.txt  gpio.cpp  gpio.hpp  gpio_defs.hpp
src/peripherals/mailbox/: CMakeLists.txt  mailbox.cpp  mailbox.hpp  mailbox_no_vcio.cpp  mailbox_no_vcio.hpp  mailbox_tag_defs.hpp
src/peripherals/pwm/: CMakeLists.txt  pwm.cpp  pwm.hpp  pwm_defs.hpp
src/peripherals/smi/: CMakeLists.txt  smi.cpp  smi.hpp  smi_defs.hpp
src/peripherals/spi/: CMakeLists.txt  spi.cpp  spi.hpp  spi_defs.hpp
src/utils/: CMakeLists.txt  reg_mem_utils.cpp  reg_mem_utils.hpp  rpi_zero_2.hpp
